--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ td button:hover {
 }
 
 .formulario-vertical input {
-  width: 450px;     /*  Ajusta este valor como quieras */
+  width: 450px;     
   padding: 8px;
   font-size: 16px;
   border-radius: 6px;
